--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="ic_launcher_foreground">#FFFFFF</color>
     <color name="ic_launcher_background">#607D8B</color>
+    <color name="cover">#0D000000</color>
 </resources>
